--- a/AST/CMakeLists.txt
+++ b/AST/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(AST
         AST.cpp
         )
-
+target_include_directories(AST
+        PUBLIC ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}
+        )
 set_property(TARGET AST PROPERTY CXX_STANDARD 17)
 
