--- a/.github/workflows/cmake-actions.yml
+++ b/.github/workflows/cmake-actions.yml
@@ -17,7 +17,7 @@ jobs:
           cmake-version: '3.16.x'
 
       - name: Checkout
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
         with:
           ref: dev/AST
 
