try to add llvm to cmakelist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,16 @@ set(CMAKE_CXX_STANDARD 17)
 #BISON_TARGET(Parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.c
 #        DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/parser.h
 #        COMPILE_FLAGS "-ll -g")
+message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
+
+# Set your project compile flags.
+# E.g. if using the C++ header files
+# you will need to enable C++11 support
+# for your compiler.
+
+include_directories(${LLVM_INCLUDE_DIRS})
+add_definitions(${LLVM_DEFINITIONS})
 
 add_custom_command(
         OUTPUT lex.yy.cpp
@@ -46,5 +56,6 @@ target_include_directories(${PROJECT_NAME}
         ${CMAKE_CURRENT_SOURCE_DIR}/AST
         ${CMAKE_CURRENT_SOURCE_DIR}/info
         )
+
 #set(CMAKE_CXX_FLAGS -g )
 #set(CMAKE_CXX_FLAGS -ll)
